# test_code_claude

./: .gitignore  README.md  pyproject.toml  test_dynamic_refitting.ipynb
dynamic_refitting/: __init__.py  autopipe.py  boost_pipeline_steps.py  cli.py  config.py  logreg_pipeline_steps.py  validation_steps.py
dynamic_refitting/explainability/: __init__.py  counterfactual.py  importance.py  model_card.py  pdp.py  shap_explainer.py
dynamic_refitting/feature_engineering/: __init__.py  encoders.py  generators.py  interactions.py
dynamic_refitting/monitoring/: __init__.py  drift.py  performance.py  report.py
dynamic_refitting/refit/: __init__.py  manager.py  scheduler.py  triggers.py
dynamic_refitting/registry/: __init__.py  experiment_tracker.py  model_registry.py  step_registry.py
dynamic_refitting/tests/: conftest.py  test_drift_and_refit.py  test_feature_engineering.py  test_pipeline_fit.py  test_registry.py  test_validation_steps.py
dynamic_refitting/utils/: __init__.py  data_gen.py  metrics.py  time_split.py
