[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic_refitting"
version = "0.1.0"
description = "Production-ready library for developing, validating, monitoring, and automatically refitting scoring models (binary classification)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "dynamic_refitting contributors"},
]
keywords = ["credit-scoring", "risk-modelling", "machine-learning", "model-monitoring", "refitting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "lightgbm>=3.3",
    "optuna>=3.0",
    "statsmodels>=0.13",
    "joblib>=1.2",
    "scipy>=1.9",
]

[project.optional-dependencies]
shap = ["shap>=0.42"]
mlflow = ["mlflow>=2.0"]
viz = ["matplotlib>=3.5", "seaborn>=0.12"]
all = [
    "shap>=0.42",
    "mlflow>=2.0",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "pyyaml>=6.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
dynamic_refitting = "dynamic_refitting.cli:main"

[tool.setuptools.packages.find]
include = ["dynamic_refitting*"]

[tool.pytest.ini_options]
testpaths = ["dynamic_refitting/tests"]
addopts = "-v --tb=short"
